--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad natus explicabo earum qui molestias expedita dolore?
         Reprehenderit ipsa voluptatibus consequatur nihil voluptatum ex numquam recusandae facilis laudantium nam, modi
         quae.</p>
+    <h1>i am anik adhiakry</h1>
 </body>
 
 </html>
