add new  sentese

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         Reprehenderit ipsa voluptatibus consequatur nihil voluptatum ex numquam recusandae facilis laudantium nam, modi
         quae.</p>
     <h1>i am anik adhiakry</h1>
+    <strong><i> fuck you  everyone</i></strong>
 </body>
 
 </html>
